--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -15,3 +15,5 @@ sphinx:
 
 # Optionally build your docs in additional formats such as PDF and ePub
 formats: all
+
+requirements_file: dev_requirements.txt
