--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -16,4 +16,7 @@ sphinx:
 # Optionally build your docs in additional formats such as PDF and ePub
 formats: all
 
-requirements_file: dev_requirements.txt
+python:
+  version: 3.7
+  install:
+    - requirements: docs/requirements.txt
